Fix mobile navigation Tweak desktop navigation spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,7 +45,7 @@ figure img {
 
 .nav {
     background-color: #181719;
-    position: fixed;
+    position: absolute;
     top: 0; bottom: 0;
     left: 0; right: 0;
     transition: height 0.3s ease-out;
@@ -53,6 +53,7 @@ figure img {
 }
 
 .nav--mobile__open .nav {
+    position: fixed;
     width: 100%; height: 100%;
 }
 
@@ -61,7 +62,7 @@ figure img {
 }
 
 .nav--mobile__aside {
-    position: fixed;
+    position: absolute;
     top: 10px; right: 10px;
 }
 
@@ -304,7 +305,7 @@ main section article figure {
 
     .nav--links > li + li {
         margin-top: 0;
-        margin-left: 7rem;
+        margin-left: 4rem;
     }
 
     .nav--links li a {
